kubernetes-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dhis-mosip-middleware 
  name: dhis-mosip-middleware-service-prod 
  namespace: interop
spec:
  type: ClusterIP
  ports:
  - port: 3000  
    name: http
    targetPort: 3000  
    protocol: TCP
  selector:
    revision: prod_v1.0  
    app: dhis-mosip-middleware 
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: dhis-mosip-middleware 
  name: dhis-mosip-middleware-deployment-prod 
  namespace: interop
spec:
  replicas: 1  
  selector:
    matchLabels:
      revision: prod_v1.0  
      app: dhis-mosip-middleware 
  template:
    metadata:
      labels:
        revision: prod_v1.0  
        app: dhis-mosip-middleware 
    spec:
      serviceAccountName: dhis-mosip-middleware-account  
      containers:  
      - image: cylabinterop/dhis2-mosip-middleware:latest
        name: dhis-mosip-middleware-container  
        ports:
        - containerPort: 3000 
        resources:
          requests:
            cpu: "100m"
            memory: 300Mi
          limits:
            memory: 1Gi
        
        imagePullPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhis-mosip-middleware-ingress
  namespace: interop
  labels:
    app: dhis-mosip-middleware 
spec:
  ingressClassName: nginx
  tls: 
    - hosts:
        - middleware.mosipcmuafrica.me
      secretName: mosip-tls-cert
  rules:
  - host: middleware.mosipcmuafrica.me 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dhis-mosip-middleware-service-prod
            port:
              number: 3000
